# pipes

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  main.cpp
.github/workflows/: ci.yml
include/: date_utils.h
tests/: unit_tests.cpp
